src/objects/Pre_Approved_Custom_Products__c.object
<CustomObject>
    <description>Custom Object to store the list of Pre-Approved custom products, on the Account level.</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Pre-Approved Custom Products</relationshipLabel>
        <relationshipName>Pre_Approved_Custom_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Expiration Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_NSP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is NSP?​</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <label>List Price​</label>
        <precision>18</precision>
        <required>true</required>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Maintenance_Beyond_Warranty_Rate__c</fullName>
        <label>Maintenance Beyond Warranty Rate %</label>
        <precision>11</precision>
        <required>true</required>
        <scale>5</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Maintenance_Type__c</fullName>
        <label>Maintenance Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bronze (Return for Exchange)</fullName>
                </value>
                <value>
                    <fullName>Gold (Return for Exchange)</fullName>
                </value>
                <value>
                    <fullName>Gold (Return for Repair)</fullName>
                </value>
                <value>
                    <fullName>Gold (Advanced Exchange)</fullName>
                </value>
                <value>
                    <fullName>Basic (8x5)</fullName>
                </value>
                <value>
                    <fullName>Gold (24x7)</fullName>
                </value>
                <value>
                    <fullName>Platinum (higher SLA)</fullName>
                </value>
                <value>
                    <fullName>MN GS TSS Basic</fullName>
                </value>
                <value>
                    <fullName>MN GS TSS Enhanced</fullName>
                </value>
                <value>
                    <fullName>MN GS TSS Enhanced Emergency</fullName>
                </value>
                <value>
                    <fullName>Basic Support</fullName>
                </value>
                <value>
                    <fullName>Pro Support</fullName>
                </value>
                <value>
                    <fullName>Total Care</fullName>
                </value>
                <value>
                    <fullName>Solution Support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Maintenance_Under_Warranty_Rate__c</fullName>
        <label>Maintenance Under Warranty Rate %</label>
        <precision>11</precision>
        <required>true</required>
        <scale>5</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Portfolio__c</fullName>
        <description>(22.4) CPQ-(ITCCPQ-2795)Has been used to display the eligible Accredited Solutions</description>
        <label>Portfolio</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FastMile</fullName>
                    <label>Fixed Wireless Access</label>
                </value>
                <value>
                    <fullName>Fixed Access - FBA</fullName>
                    <label>Broadband Access Networks</label>
                </value>
                <value>
                    <fullName>Fixed Access - POL</fullName>
                    <label>Optical LAN</label>
                </value>
                <value>
                    <fullName>Fixed Network</fullName>
                </value>
                <value>
                    <fullName>Global Services</fullName>
                </value>
                <value>
                    <fullName>IP Routing</fullName>
                </value>
                <value>
                    <fullName>Microwave</fullName>
                </value>
                <value>
                    <fullName>Modular Private Wireless Solution</fullName>
                </value>
                <value>
                    <fullName>Nokia Software</fullName>
                </value>
                <value>
                    <fullName>Nuage</fullName>
                </value>
                <value>
                    <fullName>Optics</fullName>
                </value>
                <value>
                    <fullName>Optics - WaveLite</fullName>
                </value>
                <value>
                    <fullName>QTC</fullName>
                </value>
                <value>
                    <fullName>Wireless PON</fullName>
                </value>
                <value>
                    <fullName>Airscale Wifi</fullName>
                </value>
                <value>
                    <fullName>Nokia WIFI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Code​</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Discount_Rate__c</fullName>
        <label>Product Discount Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SSP_Rate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>SSP Rate %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Pre-Approved Custom Product</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pre-Approved Custom Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>